tests/sksl/errors/FunctionParamBadType.glsl
### Compilation failed:

error: 1: no type named 'Type1'
void func(Type1 param1, Type2 param2, Type3 param3) {}
          ^^^^^
error: 1: no type named 'param1'
void func(Type1 param1, Type2 param2, Type3 param3) {}
                ^^^^^^
error: 1: expected a type, but found ','
void func(Type1 param1, Type2 param2, Type3 param3) {}
                      ^
3 errors
